fixed layout issues; fixed submit high score button link

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -189,6 +189,7 @@ main {
 }
 
 h2 {
+    text-align: center;
     font-family: "Rye";
     font-size: 4vh;
     color: white;
@@ -258,14 +259,12 @@ h3 {
 }
 
 #high-score-list-box {
-    display: flex; 
-    position: relative;
+    display: flex;
     flex-direction: column;
-    height: 100%;
-    align-items: center;
+    position: relative;
     top: 10vh;
     background-color: purple;
-    max-height: 430px;
+    max-height: 50vh;
     box-shadow: 0px 0px 10px 5px black;
 }
 
@@ -274,6 +273,7 @@ h3 {
     width: 100%;
     flex-direction: column;
     align-items: center;
+    padding-left: 20px
 }
 
 #high-score-list{
@@ -355,7 +355,11 @@ h3 {
 
     .answer-box li {
         padding: 10px;
-        margin-top: 20px;
+        margin-top: 30px;
+    }
+
+    #high-score-list {
+        font-size: 3.5vh;
     }
 
 }
